initial setup tokenizer