@@ -7,10 +7,13 @@
     <name>unit test generator</name>
     <url>http://denkzelf.nl</url>
     <properties>
+        <java-version>21</java-version>
         <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <lombok.version>1.18.30</lombok.version>
         <slf4j-api.version>2.1.0-alpha1</slf4j-api.version>
         <logback-classic.version>1.5.3</logback-classic.version>
+        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+        <junit-jupiter.version>5.10.2</junit-jupiter.version>
     </properties>
 
     <dependencies>
@@ -30,10 +33,27 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
